--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pokemon battle simulator</string>
+    <string name="nameGyarados">Gyarados</string>
+    <string name="battleTxt">Select your opponents and start the fight to see who is the winner</string>
+    <string name="battleButton">FIGHT!</string>
 </resources>
